// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib.client.parsers.products.get-lowest-priced-offers-for-asin-response should parse the GetLowestPricedOffersForASINResponse active but too soon for processing example response from MWS doc 1`] = `
{
  "getLowestPricedOffersForAsinResult": {
    "asin": "B01DL3WCPI",
    "identifier": {
      "asin": "B01DL3WCPI",
      "itemCondition": "New",
      "marketplaceId": "ATVPDKIKX0DER",
      "sellerSku": null,
      "timeOfOfferChange": null,
    },
    "itemCondition": "New",
    "marketplaceId": "ATVPDKIKX0DER",
    "offers": [],
    "status": "ActiveButTooSoonForProcessing",
    "summary": {
      "buyBoxEligibleOffers": [],
      "buyBoxPrices": [],
      "competitivePriceThreshold": null,
      "listPrice": null,
      "lowestPrices": [],
      "numberOfOffers": [],
      "offersAvailableTime": 2017-03-08T06:21:05.330Z,
      "salesRankings": [],
      "suggestedLowerPricePlusShipping": null,
      "totalOfferCount": 0,
    },
  },
  "responseMetadata": {
    "requestId": "1212334",
  },
}
`;

exports[`lib.client.parsers.products.get-lowest-priced-offers-for-asin-response should parse the GetLowestPricedOffersForASINResponse missing shipping charge example response from MWS doc 1`] = `
{
  "getLowestPricedOffersForAsinResult": {
    "asin": "B000EVPGSQ",
    "identifier": {
      "asin": "B000EVPGSQ",
      "itemCondition": "New",
      "marketplaceId": "ATVPDKIKX0DER",
      "sellerSku": null,
      "timeOfOfferChange": null,
    },
    "itemCondition": "New",
    "marketplaceId": "ATVPDKIKX0DER",
    "offers": [],
    "status": "NoOfferDueToMissingShippingCharge",
    "summary": {
      "buyBoxEligibleOffers": [],
      "buyBoxPrices": [],
      "competitivePriceThreshold": null,
      "listPrice": null,
      "lowestPrices": [],
      "numberOfOffers": [],
      "offersAvailableTime": null,
      "salesRankings": [],
      "suggestedLowerPricePlusShipping": null,
      "totalOfferCount": 0,
    },
  },
  "responseMetadata": {
    "requestId": "2bb867cd-8fa3-406c-adba-eb84c1796d21",
  },
}
`;

exports[`lib.client.parsers.products.get-lowest-priced-offers-for-asin-response should parse the GetLowestPricedOffersForASINResponse success example response from MWS doc (updated) 1`] = `
{
  "getLowestPricedOffersForAsinResult": {
    "asin": "B0002GTTRC",
    "identifier": {
      "asin": "B0002GTTRC",
      "itemCondition": "New",
      "marketplaceId": "ATVPDKIKX0DER",
      "sellerSku": null,
      "timeOfOfferChange": 2015-07-19T23:15:11.859Z,
    },
    "itemCondition": "New",
    "marketplaceId": "ATVPDKIKX0DER",
    "offers": [
      {
        "conditionNotes": "Some notes!",
        "isBuyBoxWinner": true,
        "isFeaturedMerchant": true,
        "isFulfilledByAmazon": true,
        "listingPrice": {
          "amount": 32.99,
          "currencyCode": "USD",
        },
        "myOffer": null,
        "points": null,
        "primeInformation": {
          "isNationalPrime": false,
          "isPrime": false,
        },
        "sellerFeedbackRating": {
          "feedbackCount": 1,
          "sellerPositiveFeedbackRating": 100,
        },
        "sellerId": "SELLERID",
        "shipping": {
          "amount": 0,
          "currencyCode": "USD",
        },
        "shippingTime": {
          "availabilityType": "NOW",
          "availableDate": null,
          "maximumHours": 0,
          "minimumHours": 0,
        },
        "shipsFrom": null,
        "subCondition": "new",
      },
    ],
    "status": "Success",
    "summary": {
      "buyBoxEligibleOffers": [
        {
          "condition": "new",
          "count": 1,
          "fulfillmentChannel": "Amazon",
        },
      ],
      "buyBoxPrices": [
        {
          "condition": "New",
          "landedPrice": {
            "amount": 32.99,
            "currencyCode": "USD",
          },
          "listingPrice": {
            "amount": 32.99,
            "currencyCode": "USD",
          },
          "points": null,
          "shipping": {
            "amount": 0,
            "currencyCode": "USD",
          },
        },
      ],
      "competitivePriceThreshold": null,
      "listPrice": {
        "amount": 58.34,
        "currencyCode": "USD",
      },
      "lowestPrices": [
        {
          "condition": "new",
          "fulfillmentChannel": "Amazon",
          "landedPrice": {
            "amount": 32.99,
            "currencyCode": "USD",
          },
          "listingPrice": {
            "amount": 32.99,
            "currencyCode": "USD",
          },
          "points": null,
          "shipping": {
            "amount": 0,
            "currencyCode": "USD",
          },
        },
      ],
      "numberOfOffers": [
        {
          "condition": "new",
          "count": 1,
          "fulfillmentChannel": "Amazon",
        },
      ],
      "offersAvailableTime": null,
      "salesRankings": [
        {
          "productCategoryId": "book_display_on_website",
          "rank": 401,
        },
        {
          "productCategoryId": "15356791",
          "rank": 5,
        },
        {
          "productCategoryId": "3153",
          "rank": 8,
        },
        {
          "productCategoryId": "17468",
          "rank": 16,
        },
      ],
      "suggestedLowerPricePlusShipping": {
        "amount": 32.99,
        "currencyCode": "USD",
      },
      "totalOfferCount": 0,
    },
  },
  "responseMetadata": {
    "requestId": "21534f03-e7e3-4d9a-9bea-0e15add3326d",
  },
}
`;

exports[`lib.client.parsers.products.get-lowest-priced-offers-for-asin-response should parse the GetLowestPricedOffersForASINResponse success with no offers example response from MWS doc 1`] = `
{
  "getLowestPricedOffersForAsinResult": {
    "asin": "B000EVPGSQ",
    "identifier": {
      "asin": "B000EVPGSQ",
      "itemCondition": "New",
      "marketplaceId": "ATVPDKIKX0DER",
      "sellerSku": null,
      "timeOfOfferChange": null,
    },
    "itemCondition": "New",
    "marketplaceId": "ATVPDKIKX0DER",
    "offers": [],
    "status": "NoBuyableOffers",
    "summary": {
      "buyBoxEligibleOffers": [],
      "buyBoxPrices": [],
      "competitivePriceThreshold": null,
      "listPrice": null,
      "lowestPrices": [],
      "numberOfOffers": [],
      "offersAvailableTime": null,
      "salesRankings": [],
      "suggestedLowerPricePlusShipping": null,
      "totalOfferCount": 0,
    },
  },
  "responseMetadata": {
    "requestId": "2bb867cd-8fa3-406c-adba-eb84c1796d21",
  },
}
`;
